# qt-stockchart

./: .gitignore  CMakeLists.txt  README.md  how-to-make.txt  providers.json  web-pages.json  win-ninja.bat  win-vs.bat
.claude/: settings.local.json
.github/workflows/: windows-build.yml
build_mac_app/: Makefile
build_mac_app/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mac_app/StockChart_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_mac_exe/: Makefile  StockChart
build_mac_exe/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mac_exe/.qt/rcc/: app_resources.qrc
build_mac_exe/StockChart_autogen/: deps  mocs_compilation.cpp
build_win_ninja/: .ninja_deps  .ninja_log  build.ninja
build_win_ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_win_ninja/StockChart_autogen/: deps
build_win_ninja/StockChart_autogen/UVLADIE3JM/: moc_AlphaVantageProvider.cpp.d  moc_FinnhubProvider.cpp.d  moc_MainWindow.cpp.d  moc_PolygonProvider.cpp.d  moc_SettingsDialog.cpp.d  moc_StockDataProvider.cpp.d  moc_TwelveDataProvider.cpp.d
build_win_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  StockChart.slnx  StockChart.vcxproj  StockChart.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_win_vs/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_win_vs/StockChart_autogen/: mocs_compilation_Debug.cpp
build_win_vs/StockChart_autogen/include_Debug/UVLADIE3JM/: moc_AlphaVantageProvider.cpp.d  moc_FinnhubProvider.cpp.d  moc_MainWindow.cpp.d  moc_PolygonProvider.cpp.d  moc_SettingsDialog.cpp.d  moc_StockDataProvider.cpp.d  moc_TwelveDataProvider.cpp.d
src/: AdBlockDialog.cpp  AdBlockDialog.h  AlphaVantageProvider.cpp  AlphaVantageProvider.h  ApiCallTracker.cpp  ApiCallTracker.h  AppSettings.cpp  AppSettings.h  ChartManager.cpp  ChartManager.h  CrashHandler.cpp  CrashHandler.h  CsvPorter.cpp  CsvPorter.h  FinnhubProvider.cpp  FinnhubProvider.h  FmpProvider.cpp  FmpProvider.h  JSettings.cpp  JSettings.h  MainWindow.cpp  MainWindow.h  PolygonProvider.cpp  PolygonProvider.h  SettingsDialog.cpp  StockCacheManager.cpp  StockCacheManager.h  StockDataProvider.h  StockGroupManager.cpp  StockGroupManager.h  TableManager.cpp  TableManager.h  TwelveDataProvider.cpp  TwelveDataProvider.h  WebBrowserWidget.cpp  WebBrowserWidget.h  YahooFinanceProvider.cpp  YahooFinanceProvider.h  YahooPageProvider.cpp  YahooPageProvider.h  (+1 more)
src/providers/: AlphaVantageProvider.h  FinnhubProvider.cpp  FinnhubProvider.h  FmpProvider.cpp  FmpProvider.h  MorningstarProvider.cpp  MorningstarProvider.h  PolygonProvider.cpp  PolygonProvider.h  ProviderRegistry.cpp  ProviderRegistry.h  StockDataProvider.h  TwelveDataProvider.cpp  TwelveDataProvider.h  YahooFinanceProvider.cpp  YahooFinanceProvider.h  YahooPageProvider.cpp  YahooPageProvider.h
src/stock/: StockCacheManager.cpp
src/ui/: ApiCallTracker.cpp  ApiCallTracker.h  JsonViewerDialog.cpp  JsonViewerDialog.h  SettingsDialog.cpp  SettingsDialog.h  TableManager.cpp
src/util/: AppSettings.cpp  AppSettings.h
src/web/: WebBrowserWidget.cpp
